# poetryLab

./: .gitignore  README.md  notes-poetry-install-and-use.md  poetry-package-build-and-test.md
poetry-noop/: README.md  pyproject.toml
poetry-noop/noop_band/: noop.py
poetry-noop/noop_band/emoji_format/: emojiformat.py
