[tool.poetry]
name = "noop_band"
version = "0.1.0"
description = ""
authors = ["Bill Anderson <band@acm.org>"]
readme = "README.md"
homepage = "https://github.com/band/poetryLab/poetry_noop"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
noop = "noop_band.noop:main"
